# effect-zoo

./: .gitignore  LICENSE  README.md  cabal.project  effect-zoo.cabal  plot.r  shell.nix
src/: Main.hs
src/EffectZoo/Scenario/: BigStack.hs  CountDown.hs  FileSizes.hs  Inline.hs  NoInline.hs  Reinterpretation.hs  State.hs
src/EffectZoo/Scenario/BigStack/Eff/: Identity.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/BigStack/EvEff/: Identity.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/BigStack/FreerSimple/: Identity.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/BigStack/FusedEffects/: Identity.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/BigStack/MTL/: Identity.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/BigStack/Polysemy/: Identity.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/BigStack/SimpleEffects/: Identity.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/CountDown/: Reference.hs
src/EffectZoo/Scenario/CountDown/Eff/: Main.hs  Program.hs
src/EffectZoo/Scenario/CountDown/EvEff/: Main.hs  Program.hs
src/EffectZoo/Scenario/CountDown/FreerSimple/: IntState.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/CountDown/FusedEffects/: IntState.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/CountDown/MTL/: LazyStateT.hs  Program.hs  StrictStateT.hs
src/EffectZoo/Scenario/CountDown/Polysemy/: Main.hs  Program.hs
src/EffectZoo/Scenario/CountDown/SimpleEffects/: IntState.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/FileSizes/: Reference.hs  Shared.hs
src/EffectZoo/Scenario/FileSizes/Eff/: File.hs  Logging.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/FileSizes/EvEff/: File.hs  Logging.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/FileSizes/FreerSimple/: File.hs  Logging.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/FileSizes/FusedEffects/: File.hs  Logging.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/FileSizes/MTL/: File.hs  Logging.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/FileSizes/Polysemy/: File.hs  Logging.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/FileSizes/RIO/: File.hs  Logging.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/FileSizes/SimpleEffects/: File.hs  Logging.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/Inline/: FreerSimple.hs  FusedEffects.hs  SimpleEffects.hs
src/EffectZoo/Scenario/NoInline/FreerSimple/: Main.hs  Noop.hs  Program.hs
src/EffectZoo/Scenario/NoInline/FusedEffects/: Increment.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/NoInline/SimpleEffects/: Increment.hs  Main.hs  Program.hs
src/EffectZoo/Scenario/Reinterpretation/: Shared.hs
src/EffectZoo/Scenario/Reinterpretation/Eff/: HTTP.hs  Logging.hs  Main.hs  Zooit.hs
src/EffectZoo/Scenario/Reinterpretation/EvEff/: HTTP.hs  Logging.hs  Main.hs  Zooit.hs
src/EffectZoo/Scenario/Reinterpretation/FreerSimple/: HTTP.hs  Logging.hs  Main.hs  Zooit.hs
src/EffectZoo/Scenario/Reinterpretation/FusedEffects/: HTTP.hs  Logging.hs  Main.hs  Zooit.hs
src/EffectZoo/Scenario/Reinterpretation/Polysemy/: HTTP.hs  Logging.hs  Main.hs  Zooit.hs
src/EffectZoo/Scenario/Reinterpretation/SimpleEffects/: HTTP.hs  Logging.hs  Main.hs  Zooit.hs
src/EffectZoo/Scenario/State/: Reference.hs
src/EffectZoo/Scenario/State/FreerSimple/: Main.hs  Program.hs
src/EffectZoo/Scenario/State/FusedEffects/: Main.hs  Program.hs
src/EffectZoo/Scenario/State/MTL/: LazyStateT.hs  Program.hs  StrictStateT.hs
src/EffectZoo/Scenario/State/RIO/: Main.hs  Program.hs
src/EffectZoo/Scenario/State/SimpleEffects/: Main.hs  Program.hs
