name:                effect-zoo
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
cabal-version:       >=1.10

executable effect-zoo
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.12,
                       criterion >=1.4 && <1.5,
                       simple-effects >=0.13 && <0.14,
                       freer-simple >=1.1 && <1.2,
                       transformers >=0.5 && <0.6,
                       mtl >=2.2 && <2.3,
                       fused-effects >=0.1.2.1 && < 0.2,
                       unix,
                       rio
  hs-source-dirs:      src
  other-modules:
    EffectZoo.Scenario.BigStack
    EffectZoo.Scenario.BigStack.FreerSimple.Main
    EffectZoo.Scenario.BigStack.FreerSimple.Program
    EffectZoo.Scenario.BigStack.FusedEffects.Main
    EffectZoo.Scenario.BigStack.FusedEffects.Program
    EffectZoo.Scenario.BigStack.MTL.Main
    EffectZoo.Scenario.BigStack.MTL.Program
    EffectZoo.Scenario.BigStack.SimpleEffects.Main
    EffectZoo.Scenario.BigStack.SimpleEffects.Program
    EffectZoo.Scenario.FileSizes
    EffectZoo.Scenario.FileSizes.FreerSimple.File
    EffectZoo.Scenario.FileSizes.FreerSimple.Logging
    EffectZoo.Scenario.FileSizes.FreerSimple.Main
    EffectZoo.Scenario.FileSizes.FreerSimple.Program
    EffectZoo.Scenario.FileSizes.FusedEffects.File
    EffectZoo.Scenario.FileSizes.FusedEffects.Logging
    EffectZoo.Scenario.FileSizes.FusedEffects.Main
    EffectZoo.Scenario.FileSizes.FusedEffects.Program
    EffectZoo.Scenario.FileSizes.MTL.File
    EffectZoo.Scenario.FileSizes.MTL.Logging
    EffectZoo.Scenario.FileSizes.MTL.Main
    EffectZoo.Scenario.FileSizes.MTL.Program
    EffectZoo.Scenario.FileSizes.RIO.File
    EffectZoo.Scenario.FileSizes.RIO.Logging
    EffectZoo.Scenario.FileSizes.RIO.Main
    EffectZoo.Scenario.FileSizes.RIO.Program
    EffectZoo.Scenario.FileSizes.Reference
    EffectZoo.Scenario.FileSizes.Shared
    EffectZoo.Scenario.FileSizes.SimpleEffects.File
    EffectZoo.Scenario.FileSizes.SimpleEffects.Logging
    EffectZoo.Scenario.FileSizes.SimpleEffects.Main
    EffectZoo.Scenario.FileSizes.SimpleEffects.Program
    EffectZoo.Scenario.NoInline
    EffectZoo.Scenario.NoInline.FreerSimple.Main
    EffectZoo.Scenario.NoInline.FreerSimple.Noop
    EffectZoo.Scenario.NoInline.FreerSimple.Program
    EffectZoo.Scenario.NoInline.FusedEffects.Increment
    EffectZoo.Scenario.NoInline.FusedEffects.Main
    EffectZoo.Scenario.NoInline.FusedEffects.Program
    EffectZoo.Scenario.NoInline.SimpleEffects.Increment
    EffectZoo.Scenario.NoInline.SimpleEffects.Main
    EffectZoo.Scenario.NoInline.SimpleEffects.Program
    EffectZoo.Scenario.Inline
    EffectZoo.Scenario.Inline.FreerSimple
    EffectZoo.Scenario.Inline.FusedEffects
    EffectZoo.Scenario.State
    EffectZoo.Scenario.State.FreerSimple.Main
    EffectZoo.Scenario.State.FreerSimple.Program
    EffectZoo.Scenario.State.FusedEffects.Main
    EffectZoo.Scenario.State.FusedEffects.Program
    EffectZoo.Scenario.State.MTL.LazyStateT
    EffectZoo.Scenario.State.MTL.Program
    EffectZoo.Scenario.State.MTL.StrictStateT
    EffectZoo.Scenario.State.RIO.Main
    EffectZoo.Scenario.State.RIO.Program
    EffectZoo.Scenario.State.Reference
    EffectZoo.Scenario.State.SimpleEffects.Main
    EffectZoo.Scenario.State.SimpleEffects.Program
  default-language:    Haskell2010
  ghc-options: -O2
