name:                effect-zoo
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
cabal-version:       >=1.10

executable effect-zoo
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.12,
                       criterion >=1.5 && <1.6,
                       simple-effects >=0.13 && <0.14,
                       freer-simple >=1.1 && <1.2,
                       transformers >=0.5 && <0.6,
                       mtl >=2.2 && <2.3,
                       fused-effects >=0.1.2.1 && < 0.2,
                       unix,
                       cassava,
                       bytestring,
                       statistics
  hs-source-dirs:      src
  other-modules:
    EffectZoo.Scenario.BigStack
    EffectZoo.Scenario.BigStack.FreerSimple.Identity
    EffectZoo.Scenario.BigStack.FreerSimple.Main
    EffectZoo.Scenario.BigStack.FreerSimple.Program
    EffectZoo.Scenario.BigStack.FusedEffects.Identity
    EffectZoo.Scenario.BigStack.FusedEffects.Main
    EffectZoo.Scenario.BigStack.FusedEffects.Program
    EffectZoo.Scenario.BigStack.MTL.Identity
    EffectZoo.Scenario.BigStack.MTL.Main
    EffectZoo.Scenario.BigStack.MTL.Program
    EffectZoo.Scenario.BigStack.SimpleEffects.Identity
    EffectZoo.Scenario.BigStack.SimpleEffects.Main
    EffectZoo.Scenario.BigStack.SimpleEffects.Program
    EffectZoo.Scenario.CountDown
    EffectZoo.Scenario.CountDown.FreerSimple.Main
    EffectZoo.Scenario.CountDown.FreerSimple.Program
    EffectZoo.Scenario.CountDown.FusedEffects.Main
    EffectZoo.Scenario.CountDown.FusedEffects.Program
    EffectZoo.Scenario.CountDown.MTL.LazyStateT
    EffectZoo.Scenario.CountDown.MTL.Program
    EffectZoo.Scenario.CountDown.MTL.StrictStateT
    EffectZoo.Scenario.CountDown.Reference
    EffectZoo.Scenario.CountDown.SimpleEffects.Main
    EffectZoo.Scenario.CountDown.SimpleEffects.Program
    EffectZoo.Scenario.FileSizes
    EffectZoo.Scenario.FileSizes.FreerSimple.File
    EffectZoo.Scenario.FileSizes.FreerSimple.Logging
    EffectZoo.Scenario.FileSizes.FreerSimple.Main
    EffectZoo.Scenario.FileSizes.FreerSimple.Program
    EffectZoo.Scenario.FileSizes.FusedEffects.File
    EffectZoo.Scenario.FileSizes.FusedEffects.Logging
    EffectZoo.Scenario.FileSizes.FusedEffects.Main
    EffectZoo.Scenario.FileSizes.FusedEffects.Program
    EffectZoo.Scenario.FileSizes.MTL.File
    EffectZoo.Scenario.FileSizes.MTL.Logging
    EffectZoo.Scenario.FileSizes.MTL.Main
    EffectZoo.Scenario.FileSizes.MTL.Program
    EffectZoo.Scenario.FileSizes.Reference
    EffectZoo.Scenario.FileSizes.Shared
    EffectZoo.Scenario.FileSizes.SimpleEffects.File
    EffectZoo.Scenario.FileSizes.SimpleEffects.Logging
    EffectZoo.Scenario.FileSizes.SimpleEffects.Main
    EffectZoo.Scenario.FileSizes.SimpleEffects.Program
    EffectZoo.Scenario.Reinterpretation
    EffectZoo.Scenario.Reinterpretation.FreerSimple.HTTP
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Logging
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Main
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Zooit
    EffectZoo.Scenario.Reinterpretation.FusedEffects.HTTP
    EffectZoo.Scenario.Reinterpretation.FusedEffects.Logging
    EffectZoo.Scenario.Reinterpretation.FusedEffects.Main
    EffectZoo.Scenario.Reinterpretation.FusedEffects.Zooit
    EffectZoo.Scenario.Reinterpretation.SimpleEffects.HTTP
    EffectZoo.Scenario.Reinterpretation.SimpleEffects.Logging
    EffectZoo.Scenario.Reinterpretation.SimpleEffects.Main
    EffectZoo.Scenario.Reinterpretation.SimpleEffects.Zooit
    EffectZoo.Scenario.Reinterpretation.Shared
  default-language:    Haskell2010
  ghc-options: -O2
