name:                effect-zoo
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
cabal-version:       >=1.10

executable effect-zoo
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.15,
                       criterion >=1.5,
                       simple-effects >=0.13 && <0.14,
                       freer-simple >=1.1 && <1.3,
                       transformers >=0.5 && <0.6,
                       mtl >=2.2 && <2.3,
                       fused-effects >=1.0.0.1 && <1.1,
                       polysemy >=1.3 && <1.4,
--                       eff,
                       eveff >=1.0.0.1 && <1.1,
                       unix,
                       cassava,
                       bytestring,
                       statistics
  hs-source-dirs:      src
  other-modules:
    EffectZoo.Scenario.BigStack
    EffectZoo.Scenario.BigStack.FreerSimple.Identity
    EffectZoo.Scenario.BigStack.FreerSimple.Main
    EffectZoo.Scenario.BigStack.FreerSimple.Program
    EffectZoo.Scenario.BigStack.FusedEffects.Identity
    EffectZoo.Scenario.BigStack.FusedEffects.Main
    EffectZoo.Scenario.BigStack.FusedEffects.Program
    EffectZoo.Scenario.BigStack.MTL.Identity
    EffectZoo.Scenario.BigStack.MTL.Main
    EffectZoo.Scenario.BigStack.MTL.Program
    EffectZoo.Scenario.BigStack.Polysemy.Identity
    EffectZoo.Scenario.BigStack.Polysemy.Main
    EffectZoo.Scenario.BigStack.Polysemy.Program
    EffectZoo.Scenario.BigStack.SimpleEffects.Identity
    EffectZoo.Scenario.BigStack.SimpleEffects.Main
    EffectZoo.Scenario.BigStack.SimpleEffects.Program
    EffectZoo.Scenario.BigStack.EvEff.Identity
    EffectZoo.Scenario.BigStack.EvEff.Main
    EffectZoo.Scenario.BigStack.EvEff.Program
    EffectZoo.Scenario.CountDown
    EffectZoo.Scenario.CountDown.FreerSimple.Main
    EffectZoo.Scenario.CountDown.FreerSimple.Program
    EffectZoo.Scenario.CountDown.FusedEffects.Main
    EffectZoo.Scenario.CountDown.FusedEffects.Program
    EffectZoo.Scenario.CountDown.MTL.LazyStateT
    EffectZoo.Scenario.CountDown.MTL.Program
    EffectZoo.Scenario.CountDown.MTL.StrictStateT
    EffectZoo.Scenario.CountDown.Polysemy.Main
    EffectZoo.Scenario.CountDown.Polysemy.Program
    EffectZoo.Scenario.CountDown.Reference
    EffectZoo.Scenario.CountDown.SimpleEffects.Main
    EffectZoo.Scenario.CountDown.SimpleEffects.Program
    EffectZoo.Scenario.CountDown.EvEff.Main
    EffectZoo.Scenario.CountDown.EvEff.Program
    EffectZoo.Scenario.FileSizes
    EffectZoo.Scenario.FileSizes.FreerSimple.File
    EffectZoo.Scenario.FileSizes.FreerSimple.Logging
    EffectZoo.Scenario.FileSizes.FreerSimple.Main
    EffectZoo.Scenario.FileSizes.FreerSimple.Program
    EffectZoo.Scenario.FileSizes.EvEff.File
    EffectZoo.Scenario.FileSizes.EvEff.Logging
    EffectZoo.Scenario.FileSizes.EvEff.Main
    EffectZoo.Scenario.FileSizes.EvEff.Program
    EffectZoo.Scenario.FileSizes.FusedEffects.File
    EffectZoo.Scenario.FileSizes.FusedEffects.Logging
    EffectZoo.Scenario.FileSizes.FusedEffects.Main
    EffectZoo.Scenario.FileSizes.FusedEffects.Program
    EffectZoo.Scenario.FileSizes.MTL.File
    EffectZoo.Scenario.FileSizes.MTL.Logging
    EffectZoo.Scenario.FileSizes.MTL.Main
    EffectZoo.Scenario.FileSizes.MTL.Program
    EffectZoo.Scenario.FileSizes.Polysemy.File
    EffectZoo.Scenario.FileSizes.Polysemy.Logging
    EffectZoo.Scenario.FileSizes.Polysemy.Main
    EffectZoo.Scenario.FileSizes.Polysemy.Program
    EffectZoo.Scenario.FileSizes.Reference
    EffectZoo.Scenario.FileSizes.Shared
    EffectZoo.Scenario.FileSizes.SimpleEffects.File
    EffectZoo.Scenario.FileSizes.SimpleEffects.Logging
    EffectZoo.Scenario.FileSizes.SimpleEffects.Main
    EffectZoo.Scenario.FileSizes.SimpleEffects.Program
    EffectZoo.Scenario.Reinterpretation
    EffectZoo.Scenario.Reinterpretation.FreerSimple.HTTP
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Logging
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Main
    EffectZoo.Scenario.Reinterpretation.FreerSimple.Zooit
    EffectZoo.Scenario.Reinterpretation.FusedEffects.HTTP
    EffectZoo.Scenario.Reinterpretation.FusedEffects.Logging
    EffectZoo.Scenario.Reinterpretation.FusedEffects.Main
    EffectZoo.Scenario.Reinterpretation.FusedEffects.Zooit
    EffectZoo.Scenario.Reinterpretation.Polysemy.HTTP
    EffectZoo.Scenario.Reinterpretation.Polysemy.Logging
    EffectZoo.Scenario.Reinterpretation.Polysemy.Main
    EffectZoo.Scenario.Reinterpretation.Polysemy.Zooit
    EffectZoo.Scenario.Reinterpretation.SimpleEffects.HTTP
    EffectZoo.Scenario.Reinterpretation.SimpleEffects.Logging
    EffectZoo.Scenario.Reinterpretation.SimpleEffects.Main
    EffectZoo.Scenario.Reinterpretation.SimpleEffects.Zooit
    EffectZoo.Scenario.Reinterpretation.EvEff.HTTP
    EffectZoo.Scenario.Reinterpretation.EvEff.Logging
    EffectZoo.Scenario.Reinterpretation.EvEff.Main
    EffectZoo.Scenario.Reinterpretation.EvEff.Zooit
    EffectZoo.Scenario.Reinterpretation.Shared
  default-language:    Haskell2010
  ghc-options: -O2 -flate-specialise

  default-extensions:
    BangPatterns DeriveGeneric GADTs GeneralizedNewtypeDeriving KindSignatures
    LambdaCase PackageImports ScopedTypeVariables TemplateHaskell TypeOperators
